made adapteve screen size for ipad

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -531,7 +531,7 @@ $screen_xl: 1200px;
             bottom: 32px;
         }
     }
-    @media (max-width: $screen_md_max) {
+    @media (max-width: $screen_lg_max) {
         padding: 50px 0 30px;
         .reviews_item {
             margin-bottom: 30px;
