--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,11 @@
   overflow: hidden; }
   .section_requirements > div {
     padding: 80px 0; }
-  @media (min-width: 1200px) {
+  @media (min-width: 992px) {
+    .section_requirements .requirements_content {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
     .section_requirements .section_title {
       font-size: 45px;
       line-height: 56px;
@@ -340,13 +344,18 @@
       width: 269px;
       height: 269px;
       background: rgba(97, 15, 17, 0.38); } }
-  @media (max-width: 1999px) {
+  @media (max-width: 991px) {
     .section_requirements {
       background-position: 70% 0; }
+      .section_requirements .requirements_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end; }
       .section_requirements .section_title {
         font-size: 36px;
         line-height: 46px;
-        margin-bottom: 50px; }
+        margin-bottom: 50px;
+        align-self: center; }
       .section_requirements .requirements_item {
         min-height: 250px;
         background: #FFFFFF;
